[package]
name = "scrappey-resolverr-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.41"
reqwest = "0.12.20"
serde = "1.0.219"
serde_json = "1.0.140"
thirtyfour = "0.35.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
transparent = "0.4.1"
ua_generator = "0.5.16"
