[package]
name = "scrappey-resolverr-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.141"
thirtyfour = "0.36.1"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "signal"] }
transparent = "0.4.2"
ua_generator = "0.5.20"
